# birth_guessr

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  podman-deploy.sh  run.sh
.github/workflows/: ci.yml
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/birth_guessr/: package-lock.json  package.json
frontend/e2e/: admin.spec.ts  event-page.spec.ts  helpers.ts  home.spec.ts  setup.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  setupTests.ts
frontend/src/components/: CookieBanner.tsx  EventHeader.test.tsx  EventHeader.tsx  EventPage.admin.test.tsx  EventPage.test.tsx  EventPage.tsx  Footer.tsx  GuessForm.test.tsx  GuessForm.tsx  GuessList.test.tsx  GuessList.tsx  GuessesChart.tsx  Home.test.tsx  Home.tsx  Navbar.tsx  PrivacyPolicy.tsx  TermsOfService.tsx  types.ts
migrations/20250101000000_create_events_table/: up.sql
migrations/20250101000001_create_guesses/: down.sql  up.sql
migrations/20250101000002_add_color_to_invitees/: down.sql  up.sql
migrations/20250101000003_add_guess_close_date/: down.sql  up.sql
migrations/20250101000004_add_secret_key_to_events/: down.sql  up.sql
migrations/20250101000005_add_weight_range_to_events/: down.sql  up.sql
migrations/20250101000006_add_allow_guess_edits_to_events/: down.sql  up.sql
migrations/20251216000000_add_birth_answer_to_events/: down.sql  up.sql
scripts/: test-all.sh  test-backend.sh  test-frontend.sh
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs  types.rs  utils.rs
tests/: api.rs
(+8 files in other folders)
